--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
                         android:text="AC"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -73,7 +73,7 @@
                         android:text="C"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -84,7 +84,7 @@
                         android:text="("
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -95,7 +95,7 @@
                         android:text=")"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -119,7 +119,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -131,7 +131,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -143,7 +143,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -155,7 +155,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -167,7 +167,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -191,7 +191,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -203,7 +203,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -215,7 +215,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -227,7 +227,7 @@
                         android:textAllCaps="false"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -238,7 +238,7 @@
                         android:text="÷"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -294,7 +294,7 @@
                         android:text="×"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -350,7 +350,7 @@
                         android:text="-"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -406,7 +406,7 @@
                         android:text="+"
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -462,7 +462,7 @@
                         android:text="="
                         android:textSize="30sp"
                         android:background="#000"
-                        android:textColor="#ffa500"
+                        android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
