--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,19 @@
                         android:layout_height="match_parent">
 
                     </Button>
+
+                    <Button
+                        android:id="@+id/bpi"
+                        android:layout_width="77dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#000"
+                        android:text="π"
+                        android:textColor="#fff"
+                        android:textSize="30sp">
+
+                    </Button>
+
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -233,15 +246,16 @@
                         android:layout_height="match_parent">
 
                     </Button>
+
                     <Button
                         android:id="@+id/bdiv"
-                        android:text="÷"
-                        android:textSize="30sp"
-                        android:background="#000"
-                        android:textColor="#fff"
+                        android:layout_width="436dp"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:background="#000"
+                        android:text="÷"
+                        android:textColor="#fff"
+                        android:textSize="30sp">
 
                     </Button>
                 </LinearLayout>
@@ -425,8 +439,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <Button
-                        android:id="@+id/bpi"
-                        android:text="π"
+                        android:id="@+id/buttonpercentage"
+                        android:text="%"
                         android:textSize="30sp"
                         android:background="#000"
                         android:textColor="#fff"
