--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
                         android:id="@+id/buttonac"
                         android:text="AC"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                         android:id="@+id/buttonc"
                         android:text="C"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                         android:id="@+id/buttonb1"
                         android:text="("
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -94,7 +94,7 @@
                         android:id="@+id/buttonb2"
                         android:text=")"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -107,7 +107,7 @@
                         android:layout_width="77dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:text="π"
                         android:textColor="#fff"
                         android:textSize="30sp">
@@ -131,7 +131,7 @@
                         android:text="sin"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -143,7 +143,7 @@
                         android:text="cos"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -155,7 +155,7 @@
                         android:text="tan"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -167,7 +167,7 @@
                         android:text="log"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -179,7 +179,7 @@
                         android:text="ln"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -203,7 +203,7 @@
                         android:text="x!"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -215,7 +215,7 @@
                         android:text="x²"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -227,7 +227,7 @@
                         android:text="√"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -239,7 +239,7 @@
                         android:text="1/x"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -252,7 +252,7 @@
                         android:layout_width="436dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:text="÷"
                         android:textColor="#fff"
                         android:textSize="30sp">
@@ -274,7 +274,7 @@
                         android:id="@+id/button7"
                         android:text="7"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -285,7 +285,7 @@
                         android:id="@+id/button8"
                         android:text="8"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -296,7 +296,7 @@
                         android:id="@+id/button9"
                         android:text="9"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -307,7 +307,7 @@
                         android:id="@+id/buttonmul"
                         android:text="×"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -330,7 +330,7 @@
                         android:id="@+id/button4"
                         android:text="4"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -341,7 +341,7 @@
                         android:id="@+id/button5"
                         android:text="5"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -352,7 +352,7 @@
                         android:id="@+id/button6"
                         android:text="6"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -363,7 +363,7 @@
                         android:id="@+id/buttonmin"
                         android:text="-"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -386,7 +386,7 @@
                         android:id="@+id/button1"
                         android:text="1"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -397,7 +397,7 @@
                         android:id="@+id/button2"
                         android:text="2"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -408,7 +408,7 @@
                         android:id="@+id/button3"
                         android:text="3"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -419,7 +419,7 @@
                         android:id="@+id/buttonplus"
                         android:text="+"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -442,7 +442,7 @@
                         android:id="@+id/buttonpercentage"
                         android:text="%"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -453,7 +453,7 @@
                         android:id="@+id/button0"
                         android:text="0"
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -464,7 +464,7 @@
                         android:id="@+id/buttondot"
                         android:text="."
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -475,7 +475,7 @@
                         android:id="@+id/buttonequal"
                         android:text="="
                         android:textSize="30sp"
-                        android:background="#000"
+                        android:background="#4400cc"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
