--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,30 +11,32 @@
         android:id="@+id/tvsec"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#000"
+        android:background="#fff"
         android:text=""
-        android:textColor="#f6f6f6"
+        android:textColor="#000"
         android:textSize="30sp"
         android:textAlignment="viewEnd"
         android:padding="10dp"
         android:gravity="bottom"
         android:maxLines="1"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        tools:ignore="RtlCompat">
 
     </TextView>
     <TextView
         android:id="@+id/tvmain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#000"
+        android:background="#fff"
         android:text=""
-        android:textColor="#fff"
+        android:textColor="#000"
         android:textSize="50sp"
         android:textAlignment="viewEnd"
         android:padding="10dp"
         android:gravity="bottom"
         android:maxLines="1"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        tools:ignore="RtlCompat">
 
     </TextView>
     <LinearLayout
@@ -61,7 +63,7 @@
                         android:id="@+id/buttonac"
                         android:text="AC"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -72,7 +74,7 @@
                         android:id="@+id/buttonc"
                         android:text="C"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -83,7 +85,7 @@
                         android:id="@+id/buttonb1"
                         android:text="("
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -94,7 +96,7 @@
                         android:id="@+id/buttonb2"
                         android:text=")"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -107,7 +109,7 @@
                         android:layout_width="77dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:text="π"
                         android:textColor="#fff"
                         android:textSize="30sp">
@@ -131,7 +133,7 @@
                         android:text="sin"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -143,7 +145,7 @@
                         android:text="cos"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -155,7 +157,7 @@
                         android:text="tan"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -167,7 +169,7 @@
                         android:text="log"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -179,7 +181,7 @@
                         android:text="ln"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -199,23 +201,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <Button
-                        android:id="@+id/buttonfact"
-                        android:text="x!"
-                        android:textAllCaps="false"
-                        android:textSize="30sp"
-                        android:background="#4400cc"
-                        android:textColor="#fff"
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    </Button>
-                    <Button
                         android:id="@+id/buttonsquare"
                         android:text="x²"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -227,7 +217,19 @@
                         android:text="√"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
+                        android:textColor="#fff"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </Button>
+                    <Button
+                        android:id="@+id/buttonfact"
+                        android:text="x!"
+                        android:textAllCaps="false"
+                        android:textSize="30sp"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -239,7 +241,7 @@
                         android:text="1/x"
                         android:textAllCaps="false"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -252,7 +254,7 @@
                         android:layout_width="436dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:text="÷"
                         android:textColor="#fff"
                         android:textSize="30sp">
@@ -274,7 +276,7 @@
                         android:id="@+id/button7"
                         android:text="7"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -285,7 +287,7 @@
                         android:id="@+id/button8"
                         android:text="8"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -296,7 +298,7 @@
                         android:id="@+id/button9"
                         android:text="9"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -307,7 +309,7 @@
                         android:id="@+id/buttonmul"
                         android:text="×"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -330,7 +332,7 @@
                         android:id="@+id/button4"
                         android:text="4"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -341,7 +343,7 @@
                         android:id="@+id/button5"
                         android:text="5"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -352,7 +354,7 @@
                         android:id="@+id/button6"
                         android:text="6"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -363,7 +365,7 @@
                         android:id="@+id/buttonmin"
                         android:text="-"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -386,7 +388,7 @@
                         android:id="@+id/button1"
                         android:text="1"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -397,7 +399,7 @@
                         android:id="@+id/button2"
                         android:text="2"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -408,7 +410,7 @@
                         android:id="@+id/button3"
                         android:text="3"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -419,7 +421,7 @@
                         android:id="@+id/buttonplus"
                         android:text="+"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -442,7 +444,7 @@
                         android:id="@+id/buttonpercentage"
                         android:text="%"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -453,7 +455,7 @@
                         android:id="@+id/button0"
                         android:text="0"
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -464,7 +466,7 @@
                         android:id="@+id/buttondot"
                         android:text="."
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -475,7 +477,7 @@
                         android:id="@+id/buttonequal"
                         android:text="="
                         android:textSize="30sp"
-                        android:background="#4400cc"
+                        android:background="#aa80ff"
                         android:textColor="#fff"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
